Add keyup event and timer

--- a/index.html
+++ b/index.html
@@ -26,16 +26,17 @@
         <div class="inputOutputHolder">
           <div class="boxLeft">
             <div><p class="select">English<img src="images/linkarrow.png"></p></div>
-            <textarea id="input" class="textarea" placeholder="Enter text">
-            </textarea>
+            <textarea id="input" class="textarea" placeholder="Enter text"></textarea>
           </div>
           <div class="boxRight">
             <div><p class="selectR">English<img src="images/linkarrow.png"></p></div>
-            <p></p>
+            <textarea id="output" class="textarea"></textarea>
           </div>
         </div>
         <br></br>
-        <button class="submit" id="submit">Translate</button>
+        <form>
+          <button class="submit" id="submit">Translate</button>
+        </form>
       </div>
     </div>
   </body>
