--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <style>* { margin: 0; padding: 0; box-sizing: border-box }</style>
     <link rel="stylesheet" href="css/styles.css">
     <script
-      src="http://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
+      src="http://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
       crossorigin="anonymous"></script>
     <script src="src/App.js"></script>
 
